# clp

components/core/: CMakeLists.txt
components/core/cmake/Modules/: FindMariaDBClient.cmake
components/core/cross_dependencies/: CMakeLists.txt  README.md  args.cmake
components/core/cross_dependencies/android/: README.md  android.toolchain.cmake
components/core/cross_dependencies/android/ndk/: download.sh
components/core/cross_dependencies/dependencies/CURL/: CMakeLists.txt
components/core/cross_dependencies/dependencies/boost/: CMakeLists.txt
components/core/cross_dependencies/dependencies/fmt/: CMakeLists.txt
components/core/cross_dependencies/dependencies/libArchive/: CMakeLists.txt
components/core/cross_dependencies/dependencies/libLZMA/: CMakeLists.txt
components/core/cross_dependencies/dependencies/libressl/: CMakeLists.txt
components/core/cross_dependencies/dependencies/lz4/: CMakeLists.txt
components/core/cross_dependencies/dependencies/msgpack-cxx/: CMakeLists.txt
components/core/cross_dependencies/dependencies/spdlog/: CMakeLists.txt
components/core/cross_dependencies/dependencies/zstd/: CMakeLists.txt
components/core/cross_dependencies/linux/: README.md  README_LOCAL_LINUX.md
components/core/cross_dependencies/linux/toolchains/: download_x86_64_musl.sh
components/core/src/clp/: EncodedVariableInterpreter.hpp  GrepCore.hpp  LogTypeDictionaryEntryReq.hpp  Query.cpp  Query.hpp  SQLiteDB.cpp  SQLiteDB.hpp  SchemaSearcher.cpp  SchemaSearcher.hpp  VariableDictionaryReaderReq.hpp
components/core/src/clp/clg/: clg.cpp
components/core/src/clp/clo/: clo.cpp
components/core/src/clp/streaming_archive/: MetadataDB.cpp  MetadataDB.hpp
components/core/src/clp/streaming_archive/reader/: Archive.cpp  Archive.hpp
components/core/src/clp_s/: AioEventLoop.cpp  AioEventLoop.hpp  ArchiveReader.cpp  ArchiveReader.hpp  ArchiveReaderAdaptor.cpp  ArchiveReaderAdaptor.hpp  ArchiveWriter.cpp  ArchiveWriter.hpp  BufferViewReader.hpp  CMakeLists.txt  ChunkDecompressUtils.cpp  ChunkDecompressUtils.hpp  ChunkedCompressorWrapper.hpp  ChunkedDeflateCompressor.cpp  ChunkedDeflateCompressor.hpp  ChunkedGdeflateCompressor.cpp  ChunkedGdeflateCompressor.hpp  ChunkedZstdCompressor.cpp  ChunkedZstdCompressor.hpp  ColumnReader.cpp  ColumnReader.hpp  ColumnWriter.cpp  ColumnWriter.hpp  CommandLineArguments.cpp  CommandLineArguments.hpp  Compressor.hpp  DictionaryEntry.cpp  DictionaryEntry.hpp  DictionaryReader.hpp  DictionaryWriter.cpp  DictionaryWriter.hpp  DirectIoUtils.hpp  JsonParser.cpp  JsonParser.hpp  JsonSerializer.hpp  OutputHandlerImpl.hpp  PackedStreamReader.cpp  PackedStreamReader.hpp  ParallelReader.cpp  ParallelReader.hpp  (+19 more)
components/core/src/clp_s/gpu/bitmap/cuda/: Scan.cpp  Scan.cu  Scan.hpp  ScanKernels.cuh
components/core/src/clp_s/gpu/bitmap/host/: Output.cpp  Output.hpp  Scan.cpp  Scan.hpp
components/core/src/clp_s/gpu/common/cuda/: CudaWarmup.cpp  CudaWarmup.hpp  GdsReader.cpp  GdsReader.hpp  NvcompDecompress.cpp  NvcompDecompress.hpp  StreamOrderedAllocator.hpp  Transfer.cpp  Transfer.hpp
components/core/src/clp_s/gpu/common/host/: BitmapUtils.hpp  DecompressStreams.cpp  DecompressStreams.hpp  ErtInfo.cpp  ErtInfo.hpp  ErtInfoTypes.hpp  Output.cpp  Output.hpp  Pipeline.cpp  Pipeline.hpp  ScanRequest.cpp  ScanRequest.hpp  ScanRequestTypeUtils.hpp  ScanRequestTypes.hpp
components/core/src/clp_s/gpu/cpu_baseline/host/: Scan.cpp  Scan.hpp  ScanSimd.cpp  ScanSimd.hpp
components/core/src/clp_s/gpu/cuda/: CMakeLists.txt  GpuScan.cu  GpuScan.hpp  GpuTransfer.cpp  GpuTransfer.hpp
components/core/src/clp_s/gpu/encoded_buffer/cuda/: BitmapScan.cu  BitmapScan.hpp  BitmapScanKernels.cuh  Packing.cu  Packing.hpp  PackingKernels.cu  PackingKernels.cuh  Scan.cpp  Scan.hpp  Types.hpp
components/core/src/clp_s/gpu/encoded_buffer/host/: Scan.cpp  Scan.hpp
components/core/src/clp_s/gpu/host/: GpuErtView.cpp  GpuErtView.hpp  GpuIntEqOutput.cpp  GpuIntEqOutput.hpp  GpuIntEqScan.cpp  GpuIntEqScan.hpp
components/core/src/clp_s/indexer/: CMakeLists.txt
components/core/src/clp_s/search/: CMakeLists.txt  Output.cpp  Output.hpp  QueryRunner.cpp  QueryRunner.hpp  SchemaMatch.cpp  SchemaMatch.hpp  SearchUtils.cpp
components/core/src/clp_s/search/clp_search/: Query.cpp  Query.hpp
components/core/tests/: SchemaSearcherTest.hpp  search_test_utils.cpp  search_test_utils.hpp  test-GrepCore.cpp  test-SchemaSearcher.cpp  test-SubQueryPositions.cpp  test-clp_s-search.cpp
components/webui/client/src/api/presto-search/: index.ts
components/webui/client/src/pages/SearchPage/SearchControls/Dataset/: index.tsx  useDatasetSelect.ts  useSelect.ts
components/webui/client/src/pages/SearchPage/SearchControls/Presto/GuidedControls/: index.module.css
components/webui/client/src/pages/SearchPage/SearchControls/Presto/GuidedControls/From/: index.tsx  sql.ts  usePrestoTableSelect.ts
components/webui/client/src/pages/SearchPage/SearchResults/SearchResultsTable/SearchResultsVirtualTable/: index.tsx  typings.tsx
components/webui/client/src/sql-parser/: Sql.g4  index.ts
components/webui/common/src/schemas/: presto-search.ts
components/webui/server/src/routes/api/presto-search/: index.ts
components/webui/server/src/schemas/: presto-search.ts
